--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-screens": "2.0.0-alpha.12",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "styled-components": "^4.4.1"
   },
   "devDependencies": {
     "@types/react": "~16.9.0",
