feat: installing eslint + prettier + husky + lint-staged

--- a/package.json
+++ b/package.json
@@ -8,6 +8,17 @@
     "web": "expo start --web",
     "eject": "expo eject"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.ts": [
+      "npm run lint:fix",
+      "git add"
+    ]
+  },
   "dependencies": {
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-prettier": "^3.1.2",
